5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1709_3060.log
== TEST (2019-05-02 11:10:55) 
-- CODE:
v1 = int(input("primeiro valor sorteado: "))
v2 = int(input("segundo valor sorteado: "))
nr = int(input("numero de rodadas: "))

if (1<=v1<=6) or (1<=v2<=6) or (nr<0):
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:21) 
-- CODE:
v1 = int(input("primeiro valor sorteado: "))
v2 = int(input("segundo valor sorteado: "))
nr = int(input("numero de rodadas: "))

if (1<=v1<=6) or (1<=v2<=6) or (nr<0):
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:32) 
-- CODE:
v1 = int(input("primeiro valor sorteado: "))
v2 = int(input("segundo valor sorteado: "))
nr = int(input("numero de rodadas: "))

if (1<=v1<=6) or (1<=v2<=6) or (nr<0):
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:59) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) or (r<0):
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:33) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) or (r<0):
	print("Entrada invalida")
	elif (d1 + d2 == 12):
		print("CONSTRICAO")
		print(d1 + d2 + 1)
-- ERROR:
File "XXXX", line 7
    elif (d1 + d2 == 12):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:51) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) or (r<0):
	print("Entrada invalida")
elif (d1 + d2 == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:56) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:18:50) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) or (r<0):
	print("Entrada invalida")
	elif ((d1 + d2) == 12):
		print("CONSTRICAO")
		print(d1 + d2 + 1)
-- ERROR:
File "XXXX", line 7
    elif ((d1 + d2) == 12):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:07) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (1<=d1<=6) or (1<=d2<=6) and (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:37) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
rr = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:48) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
r = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:51) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
r = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
elif ((d1 + d2) < 5):
	print("POLEN")
	print((d1 + d2 + 1)*r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:45) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
r = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
elif ((d1 + d2) < 5):
	print("POLEN")
	print((d1 + d2 + 1)*r)
else:
	print("FRAQUEZA")
	print(d1*d2)
	
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:15) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
r = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
elif ((d1 + d2) < 5):
	print("POLEN")
	print((d1 + d2 + 1)*r)
else:
	print("FRAQUEZA")
	print(d1*d2)
	
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:27:23) 
-- CODE:
d1 = int(input("primeiro valor sorteado: "))
d2 = int(input("segundo valor sorteado: "))
r = int(input("numero de rodadas: "))

if (d1<1) or (d1>6) or (d2<1) or (d2>6) or (r<0):
	print("Entrada invalida")
elif ((d1 + d2) == 12):
	print("CONSTRICAO")
	print(d1 + d2 + 1)
elif ((d1 + d2) < 5):
	print("POLEN")
	print((d1 + d2 + 1)*r)
else:
	print("FRAQUEZA")
	print(d1*d2)
	
-- EXECUTION TIME:
0.191197
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
27
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
